# openpy

./: .gitignore  README.md  _vm_test.py  install.sh  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
openpy/: __init__.py
openpy/channels/: __init__.py  telegram_bot.py
openpy/cli/: __init__.py  config_cmd.py  doctor_cmd.py  gateway_cmd.py  main.py  memory_cmd.py  onboard_cmd.py  repl.py  skills_cmd.py
openpy/core/: __init__.py  agentic_loop.py  classifier.py  cli_providers.py  contracts.py  executor.py  formatter.py  harness_builder.py  learner.py  llm_engine.py  memory.py  pipeline.py  skill_loader.py  validator.py
openpy/gateway/: __init__.py  server.py
openpy/skills/core/: CORE_ALWAYS.md
openpy/skills/devops/: docker.md
openpy/skills/media/: audio_transcription.md
openpy/skills/sysadmin/: diagnostico.md  firewall.md
openpy/tools/: __init__.py  base.py  file_tools.py  registry.py  shell.py  web_tools.py
openpy/utils/: __init__.py  config.py
