[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpy"
version = "0.1.0"
description = "Ecossistema operacional agêntico — compilador de intenção humana para ações técnicas controladas"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenPy Team"}
]

dependencies = [
    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    # API / Gateway
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # LLM
    "litellm>=1.40.0",
    # Database
    "aiosqlite>=0.20.0",
    # Memory vetorial
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Telegram
    "python-telegram-bot>=21.0",
    # Utils
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "psutil>=5.9.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
openpy = "openpy.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["openpy*"]

[tool.ruff]
line-length = 100
target-version = "py310"
